syntax = "proto3";

package host;

import "google/protobuf/empty.proto";

message GetHostVersionResponse {
    string version = 1;
}

message GetIdeRedirectUriResponse {
    string uri = 1;
}

message GetMachineIdResponse {
    string machine_id = 1;
}

message ClipboardReadTextResponse {
    string text = 1;
}

message ClipboardWriteTextRequest {
    string text = 1;
}

message TelemetrySettings {
    bool telemetry_enabled = 1;
}

service EnvService {
    rpc getHostVersion(google.protobuf.Empty) returns (GetHostVersionResponse);
    rpc getIdeRedirectUri(google.protobuf.Empty) returns (GetIdeRedirectUriResponse);
    rpc getMachineId(google.protobuf.Empty) returns (GetMachineIdResponse);
    rpc clipboardReadText(google.protobuf.Empty) returns (ClipboardReadTextResponse);
    rpc clipboardWriteText(ClipboardWriteTextRequest) returns (google.protobuf.Empty);
    rpc subscribeToTelemetrySettings(google.protobuf.Empty) returns (stream TelemetrySettings);
    rpc getTelemetrySettings(google.protobuf.Empty) returns (TelemetrySettings);
}